Wrap long text in dropdown menu (fixes #318)

--- a/less/navmenu.less
+++ b/less/navmenu.less
@@ -58,6 +58,10 @@
     border: none;
     .box-shadow(none);
     border-radius: 0;
+
+    li > a {
+      white-space: normal;
+    }
   }
 }
 
